[project]
name = "v4vapp-hive-pricefeed"
version = "1.3.0"
description = "An automatic price feed for Hive Witnesses"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "single-source>=0.3.0,<0.4.0",
    "lighthive>=0.4.2,<0.5.0",
]

[dependency-groups]
dev = [
    "black>=22.12.0,<23.0.0",
    "pytest>=7.2.0,<8.0.0",
    "flake8>=6.0.0,<7.0.0",
]

[tool.uv]
package = false
